--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
                                 It’s personal now.
 
-                                See you Zuck.
+                                See you X.
                             </div>
                             <div class="icons flex justify-between mx-4 my-4 text-sm text-gray-600">
                               <div
